--- a/Styles.css
+++ b/Styles.css
@@ -8,11 +8,9 @@ body{
   text-align:center;
   font-size:2vw;
 }
-.lowerRight{
+.lowGo{
     width:15vw;
     height:auto;
-    right: 5vw;
-    bottom: 10vh;
 }
  /* unvisited link */
 a:link {
@@ -32,7 +30,7 @@ a:hover {
 /* selected link */
 a:active {
   color: #eaff00;
-} 
+}
 html{
     background-color:#003900;
 }
