--- a/Styles.css
+++ b/Styles.css
@@ -39,6 +39,13 @@ h1{
     text-align:center;
     font-size:5vw;
 }
+.lowGo{
+    width:40vw;
+    height:auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 img{
     width:40vw;
     height:auto;
