changed some aspects

--- a/Styles.css
+++ b/Styles.css
@@ -39,6 +39,10 @@ h1{
     text-align:center;
     font-size:5vw;
 }
+.RelButon{
+    text-align:center;
+    font-size:3vw;
+}
 .lowGo{
     width:40vw;
     height:auto;
